2008-01-18  Jerome Rapinat <romjerome@yahoo.fr>
         * data/man/gramps.1.in: add missing -l option

2008-01-18 Peter Landgren <peter.talken@telia.com>
    * src/const.py.in: --help and -h now gives similar messages

2008-01-18 Benny Malengier <benny.malengier@gramps-project.org>
	* src/ExportAssistant.py: workaround around bug
		http://bugzilla.gnome.org/show_bug.cgi?id=56070 as indicated on
		Ubuntu launchpad, make forward button accept click after it
		becomes sensitive.

2008-01-18 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditChildRef.py: remove debug print statements
	* src/glade/gramps.glade: wrong visible setting in child ref widget

2008-01-17  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/ReportBase/_ReportOptions.py:
	* src/plugins/KinshipReport.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DescendReport.py:
	* src/plugins/IndivComplete.py:
	* src/plugins/CalculateEstimatedDates.py:
	* src/plugins/BookReport.py:
	* src/plugins/TimeLine.py:
	* src/plugins/GVFamilyLines.py:
	* src/plugins/Calendar.py:
	* src/plugins/AncestorReport.py:
	* src/plugins/MarkerReport.py:
	* src/plugins/DescendChart.py:
	* src/plugins/EndOfLineReport.py:
	* src/plugins/AncestorChart.py:
	* src/plugins/DetAncestralReport.py:
	* src/plugins/FamilyGroup.py:
	* src/plugins/GVRelGraph.py:
	* src/plugins/GVHourGlass.py:
	* src/plugins/StatisticsChart.py:
	* src/plugins/FanChart.py:
	* src/PluginUtils/__init__.py:
	* src/PluginUtils/_MenuOptions.py:
	* src/PluginUtils/_GuiOptions.py: Added
	* src/PluginUtils/Makefile.am:
	* src/Filters/Rules/Family/__init__.py:
	* src/Filters/Rules/Family/_IsBookmarked.py: Added
	* src/Filters/Rules/Family/Makefile.am:
	* po/POTFILES.in:
	Refactoring the report system. Decouple MenuOptions from the code that 
	displays them. (Book Report is broken and needs to be fixed.)

2008-01-17  Douglas S. Blank  <dblank@cs.brynmawr.edu>